--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -11,7 +11,8 @@
 
 @media screen and (max-width: 320px) {
   .profile__add-button {
-    width: inherit;
+    width: 100%;
+    margin-top: 36px;
   }
 }
 
