--- a/blocks/element/__info/element__info.css
+++ b/blocks/element/__info/element__info.css
@@ -2,5 +2,7 @@
   display: flex;
   justify-content: space-between;
   background-color: white;
+  margin: 0;
+  padding: 0;
   padding: 25px 15px 31px 21px;
 }
