--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,5 +1,13 @@
 .header {
-  margin-top: 45px;
-  margin-bottom: 40px;
+  margin: 45px 19px 40px;
   border-bottom: 1px solid #545454;
+}
+
+@media screen and (max-width: 320px) {
+  .header {
+    margin: 0;
+    margin-top: 28px;
+    padding-left: 27px;
+    margin-bottom: 42px;
+  }
 }
