--- a/blocks/popup/__button-close/popup__button-close.css
+++ b/blocks/popup/__button-close/popup__button-close.css
@@ -5,8 +5,16 @@
   top: -40px;
   right: -40px;
   cursor: pointer;
+  padding: 0;
 }
 
 .popup__button-close:hover {
   opacity: 0.6;
+}
+
+@media screen and (max-width: 320px) {
+  .popup__button-close {
+    top: -36px;
+    right: 0;
+  }
 }
