--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -18,3 +18,10 @@
   background: #000000;
   opacity: 0.8;
 }
+
+@media screen and (max-width: 320px) {
+  .popup__button {
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
