--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -14,3 +14,9 @@
 .popup__input:nth-child(2) {
   margin-bottom: 48px;
 }
+
+@media screen and (max-width: 320px) {
+  .popup__input:nth-child(2) {
+    margin-bottom: 35px;
+  }
+}
