--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -7,5 +7,17 @@
   color: #000;
   margin: 0;
   padding: 0;
-  margin-bottom: 54px;
+  margin-bottom: 34px;
+}
+
+@media screen and (max-width: 320px) {
+  .popup__title {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 900;
+    font-size: 18px;
+    line-height: 22px;
+    color: #000000;
+    margin-bottom: 62px;
+  }
 }
