--- a/blocks/profile-info/__subtitle/profile-info__subtitle.css
+++ b/blocks/profile-info/__subtitle/profile-info__subtitle.css
@@ -7,6 +7,10 @@
   font-size: 18px;
   line-height: 22px;
   color: #ffffff;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 336px;
 }
 
 @media screen and (max-width: 320px) {
@@ -14,5 +18,6 @@
     font-size: 14px;
     line-height: 17px;
     text-align: center;
+    max-width: 282px;
   }
 }
