--- a/blocks/profile-info/__title/profile-info__title.css
+++ b/blocks/profile-info/__title/profile-info__title.css
@@ -8,6 +8,10 @@
   font-size: 42px;
   line-height: 48px;
   color: #ffffff;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 294px;
 }
 
 @media screen and (max-width: 320px) {
@@ -16,5 +20,6 @@
     line-height: 33px;
     text-align: center;
     padding-right: 10px;
+    max-width: 189px;
   }
 }
