--- a/pages/index.css
+++ b/pages/index.css
@@ -4,12 +4,12 @@
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/main/main.css);
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
-@import url(../blocks/profile/__actions/profile__actions.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
 @import url(../blocks/profile-info/profile-info.css);
-@import url(../blocks/profile-info/__title-and-btn/profile-info__title-and-btn.css);
+@import url(../blocks/profile-info/__container/profile-info__container.css);
 @import url(../blocks/profile-info/__title/profile-info__title.css);
 @import url(../blocks/profile-info/__subtitle/profile-info__subtitle.css);
 @import url(../blocks/profile-info/__edit-button/profile-info__edit-button.css);
@@ -27,6 +27,7 @@
 @import url(../blocks/popup/__overflow/popup__overflow.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__button-close/popup__button-close.css);
+@import url(../blocks/popup/__button-close-img/popup__button-close-img.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__inputs/popup__inputs.css);
 @import url(../blocks/popup/__input/popup__input.css);
