--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,5 +1,14 @@
 .footer {
   margin-bottom: 60px;
+  margin-right: 19px;
+  margin-left: 19px;
+}
+
+@media screen and (min-width: 1280px) {
+  .footer {
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 
 @media screen and (max-width: 320px) {
