--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,3 +1,11 @@
 .header__logo {
   margin-bottom: 41px;
 }
+
+@media screen and (max-width: 320px) {
+  .header__logo {
+    margin-bottom: 32px;
+    width: 104px;
+    height: 25px;
+  }
+}
