--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -7,12 +7,13 @@
   height: 50px;
   width: 150px;
   cursor: pointer;
+  align-self: center;
 }
 
 @media screen and (max-width: 320px) {
   .profile__add-button {
     width: 100%;
-    margin-top: 36px;
+    margin-top: 34px;
   }
 }
 
