--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,7 +1,6 @@
 .profile {
   display: flex;
-  align-items: center;
-  gap: 30px;
+  column-gap: 30px;
   margin-bottom: 51px;
   flex-wrap: wrap;
 }
