--- a/pages/index.css
+++ b/pages/index.css
@@ -31,3 +31,4 @@
 @import url(../blocks/popup/__inputs/popup__inputs.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__button/popup__button.css);
+@import url(../scripts/app.js);
