--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,13 +1,14 @@
 .elements {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fill, 282px);
   gap: 20px 17px;
   margin-bottom: 67px;
+  justify-content: center;
 }
 
 @media screen and (max-width: 320px) {
   .elements {
-    grid-template-columns: 1fr;
+    grid-template-columns: 282px;
     gap: 19px 20px;
     margin-bottom: 48px;
   }
