--- a/blocks/profile-info/profile-info.css
+++ b/blocks/profile-info/profile-info.css
@@ -8,10 +8,12 @@
   grid-auto-flow: row dense;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 600px) {
   .profile-info {
     grid-template-columns: 1fr 18px;
     margin-right: -27px;
     gap: 8px 10px;
+    margin-bottom: 36px;
+    margin-top: 26px;
   }
 }
