--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,5 +1,9 @@
 .profile__add-button {
-  background: none;
+  background-image: url(../../../images/add-button.svg);
+  background-repeat: no-repeat;
+  background-color: transparent;
+  background-size: 22px;
+  background-position: center;
   margin: 0;
   padding: 0;
   border: 2px solid #ffffff;
@@ -13,7 +17,7 @@
 @media screen and (max-width: 320px) {
   .profile__add-button {
     width: 100%;
-    margin-top: 34px;
+    background-size: 16px;
   }
 }
 
