--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,7 +5,10 @@
   top: 0;
   left: 0;
   z-index: 1;
-  display: none;
+  display: flex;
   justify-content: center;
   align-items: center;
+  transition: visibility 0.2s, opacity 0.2s linear;
+  opacity: 0;
+  visibility: hidden;
 }
