--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -9,10 +9,11 @@
   width: 358px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 520px) {
   .popup__container {
     margin-right: 19px;
     margin-left: 19px;
     padding: 25px 22px;
+    width: 282px;
   }
 }
